Nearly the final state!